[tool.poetry]
name = "codelink"
version = "0.1.0"
description = "Module for interaction with LLMs for coding"
authors = ["Richard Podkolinski <devlar@gmail.com>"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyperclip = "^1.8.2"
Pygments = "^2.17.2"
pytest = "^8.0.1"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."console_scripts"]
"codelink" = "codelink.path:main"
